--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10884,3 +10884,117 @@ a.text-dark:focus {
   }
 }
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
+.loader {
+  position: fixed;
+  z-index: 99;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.loader > img {
+  width: 220px;
+  -webkit-animation: myBounce 0.7s;
+          animation: myBounce 0.7s;
+  -webkit-animation-direction: alternate;
+          animation-direction: alternate;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+}
+
+.loader.hidden {
+  height: 500;
+  -webkit-animation: fadeOut 1s;
+          animation: fadeOut 1s;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+
+@-webkit-keyframes myBounce {
+  from {
+    transform: translate3d(0, -100, 0);
+  }
+
+  to {
+    transform: translate3d(0, 100px, 0);
+  }
+}
+
+@keyframes myBounce {
+  from {
+    transform: translate3d(0, -100, 0);
+  }
+
+  to {
+    transform: translate3d(0, 100px, 0);
+  }
+}
+
+@-webkit-keyframes fadeOut {
+  0% {
+    opacity: 1;
+    visibility: visible;
+  }
+
+  90% {
+    opacity: 1;
+    visibility: visible;
+  }
+
+  100% {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
+    visibility: visible;
+  }
+
+  90% {
+    opacity: 1;
+    visibility: visible;
+  }
+
+  100% {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+
+.carousel-text {
+  text-shadow: 2px 2px rgba(19, 6, 6, 0.5);
+}
+
+#announcements {
+  background-color: royalblue;
+  color: white;
+}
+
+.nav-link {
+  font-weight: 800;
+  color: #fab402;
+}
+
+#map {
+  height: 400px;
+  width: 100%;
+}
+
+#home-footer {
+  height: 30px;
+  width: 100%;
+}
+
