--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,79 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+*{
+    margin: 0;
+    padding: 0;
+}
+
+.loader{
+    position: fixed;
+    z-index: 99;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba($color: #fff, $alpha: .7);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.loader > img{
+    width: 220px;
+    animation: myBounce 0.7s;
+    animation-direction: alternate;
+    animation-iteration-count: infinite;
+}
+
+.loader.hidden {
+    height: 500;
+    animation: fadeOut 1s;
+    animation-fill-mode: forwards;
+}
+
+@keyframes myBounce{
+    from { transform: translate3d(0, -100, 0);}
+    to { transform: translate3d(0, 100px, 0);}
+}
+
+@keyframes fadeOut{
+    0%{
+        opacity: 1;
+        visibility: visible;
+    }
+    90%{
+        opacity: 1;
+        visibility: visible;
+    }
+    100%{
+        opacity: 0;
+        visibility: hidden;
+    }
+}
+
+.carousel-text{
+    text-shadow: 2px 2px rgba(19, 6, 6,.5);
+}
+
+#announcements{
+    background-color: royalblue;
+    color: white;
+}
+
+.nav-link{
+    font-weight: 800;
+    color:rgb(250, 180, 2);
+}
+
+#map{
+    height: 400px;
+    width: 100% ;
+}
+
+#home-footer{
+    height: 30px;
+    width: 100%;
+}
