--- a/public/css/app.css
+++ b/public/css/app.css
@@ -16914,9 +16914,14 @@ html {
   font-size: 22px;
 }
 
-#home-footer {
+.home-footer {
+  height: 200px;
   width: 100%;
   background-color: rgba(0, 0, 0, 0.712);
   color: white;
+}
+
+.fas.fa-sign-out-alt {
+  background-color: black;
 }
 
