--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -124,3 +124,12 @@ html{
 .fa-user-plus{
     color:rgb(33, 33, 216) !important;
 }
+
+.fa-pencil-alt{
+    color: rgba($color: #414af5b4, $alpha: .9) !important;
+}
+
+.fa-trash-alt
+{
+    color: rgb(255, 0, 0);
+}
