--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -11,6 +11,8 @@ $fa-font-path: "../webfonts";
 @import '~@fortawesome/fontawesome-free/scss/fontawesome.scss';
 @import '~@fortawesome/fontawesome-free/scss/solid.scss';
 
+@import '~animate.css/animate.min.css';
+
 *{
     margin: 0;
     padding: 0;
